# jfmt

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml  test.yml
src/: formatter.rs  json.pest  json_formatter.rs  main.rs  parser.rs
src/nodes/: array.rs  boolean.rs  mod.rs  node.rs  null.rs  number.rs  object.rs  string.rs
src/parser/: mod.rs  parse.rs
