[package]
name = "jfmt"
version = "0.4.0"
authors = ["Víctor Berga <vbergae@users.noreply.github.com>"]
edition = "2021"
license = "GPL v3"
description = "JSON formatter written in Rust using Pest for the grammar"
readme = "README.md"
homepage = "https://github.com/vbergae/jfmt"
repository = "https://github.com/vbergae/jfmt"
keywords = ["cli", "json", "formatter"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
clap-stdin = "0.5.1"
colored = "2.1.0"
pest = "2.7.14"
pest_derive = "2.7.13"
